# python_dev_test_task

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: basic_code_style_checks.yml
app/: pytest.ini
app/code_checker/: admin.py  apps.py  code_checker_services.py  models.py  tasks.py  utils.py
app/code_checker/migrations/: 0001_initial.py  0002_alter_checklog_options_alter_codecheck_options_and_more.py  0003_codecheck_last_check_result.py  0004_alter_checklog_log_text_and_more.py
app/code_checker/tests/: __init__.py  test_models.py  test_services.py  test_utils.py
app/code_files/: admin.py  apps.py  code_files_services.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
app/code_files/migrations/: 0001_initial.py  0002_uploadedfile_is_checked.py  0003_codecheck_checklog.py  0004_remove_uploadedfile_is_checked_and_more.py  0005_remove_codecheck_file_delete_checklog_and_more.py  0006_alter_uploadedfile_options_alter_uploadedfile_file_and_more.py
app/code_files/tests/: __init__.py  test_form.py  test_model.py  (+3 more)
app/common/: views.py
app/config/: celery.py  settings.py  urls.py
app/email_sender/: email_sender_services.py  tasks.py
app/reports/: reports_services.py  urls.py  views.py
app/users/: admin.py  forms.py  models.py  urls.py  views.py
code_checkers/: .flake8  bandit.yaml
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/: index.html
env/: .env.example
gh_pages/src/: script.js  styles.css
(+36 files in other folders)
